--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ allprojects {
     targetCompatibility = JavaVersion.VERSION_11
 
     version 'v0.27.1'
-    group 'com.github.PeOS-China'
+    group 'com.github.TeamNewPipe'
 
     repositories {
         mavenCentral()
